Added dependencied in travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,18 @@ branches:
 language: bash
 sudo: true
 
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y libjpeg62
+  - sudo apt-get -y install libgstreamer0.10-0
+  - sudo apt-get -y install libgstreamer-plugins-base0.10-0
+   # Ubuntu 12.04 doesn't include libjpeg62 (and it's required by Qt 4.8)
+  - sudo apt-get -y install libjpeg62
+   # Need the OpenGL development libraries to build QtGui
+  - sudo apt-get -y install libgl1-mesa-dev
+   # install Qt 4.8 SDK (into a private /opt/RStudio-QtSDK directory so as to
+   # not conflict with any other installed versions of Qt on the system)
+  - ./install-qt-sdk
+
 script:
     - bash install-rstudio-daily.sh
