--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ before_install:
    # Need the OpenGL development libraries to build QtGui
   - sudo apt-get -y install libgl1-mesa-dev
   - sudo apt-get -y install r-recommended
+   # Install packages from CRAN
+  - sudo R --vanilla -e 'install.packages(c("httr","jsonlite"), repos="http://cran.us.r-project.org")'  
 
 script:
     # Adding type installs to check which one fails
