--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ before_install:
   - sudo apt-get -y install libjpeg62
    # Need the OpenGL development libraries to build QtGui
   - sudo apt-get -y install libgl1-mesa-dev
+  - sudo apt-get -y install libxml2-dev
   - sudo apt-get -y install r-recommended
    # Install packages from CRAN
   - sudo R --vanilla -e 'install.packages(c("httr","jsonlite","xml2"), repos="http://cran.us.r-project.org")'  
