--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,10 @@ before_install:
   - sudo apt-get -y install libxml2-dev
   - sudo add-apt-repository "deb http://cran.rstudio.com/bin/linux/ubuntu $(lsb_release -sc)/"
   - sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E084DAB9
-  - sudo add-apt-repository ppa:marutter/rdev
-  - sudo apt-get update
-  - sudo apt-get upgrade
-  - sudo apt-get install r-base
+  - sudo add-apt-repository -y ppa:marutter/rdev
+  - sudo apt-get -y update
+  - sudo apt-get -y upgrade
+  - sudo apt-get -y install r-base
    # Install packages from CRAN
   - sudo R --vanilla -e 'install.packages(c("httr","jsonlite","xml2"), repos="http://cran.us.r-project.org")'  
 
